--- a/lab2/package.json
+++ b/lab2/package.json
@@ -10,6 +10,7 @@
   "description": "",
   "dependencies": {
     "express": "^5.0.1",
-    "node": "^20.19.0"
+    "node": "^20.19.0",
+    "prettier": "^3.5.3"
   }
 }
