--- a/lab2/package.json
+++ b/lab2/package.json
@@ -9,8 +9,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "express": "^5.0.1",
+    "jsonwebtoken": "^9.0.2",
     "node": "^20.19.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "prettier": "^3.5.3"
   }
 }
