--- a/lab2/package.json
+++ b/lab2/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cookie-parser": "^1.4.7",
     "express": "^5.0.1",
+    "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "node": "^20.19.0",
     "passport": "^0.7.0",
