--- a/lab2/package.json
+++ b/lab2/package.json
@@ -17,6 +17,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "prettier": "^3.5.3"
+    "prettier": "^3.5.3",
+    "sqlite3": "^5.1.7"
   }
 }
