--- a/lab2/package.json
+++ b/lab2/package.json
@@ -18,6 +18,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "prettier": "^3.5.3",
+    "scrypt-mcf": "^1.1.1",
     "sqlite3": "^5.1.7"
   }
 }
