--- a/lab2/dockerfile
+++ b/lab2/dockerfile
@@ -1,9 +1,11 @@
 FROM ubuntu:latest
 RUN apt-get update
 RUN apt-get install -y nodejs npm
-COPY ./index.js /
 COPY ./package.json /
 COPY ./package-lock.json /
 RUN npm i
+COPY ./index.js /
+COPY ./localhost.crt /
+COPY ./localhost.key /
 EXPOSE 9443
-CMD ['npm','run','start']
+CMD ["/bin/npm","run","start"]
